Fixed long sweet alerts on mobile devices
They are now scrollable when width < 430 and the alert is moved up

--- a/app/assets/stylesheets/users/enrollments.css
+++ b/app/assets/stylesheets/users/enrollments.css
@@ -33,6 +33,7 @@
   }
 }
 
+
 .poster-thumbnail img {
   width: 140px;
 }
@@ -165,4 +166,15 @@
 
 .notes {
   resize: none;
+}
+
+/* Sweet-alerts with a lot of text will not properly display their buttons */
+@media (max-width: 430px){
+  .long-sweet-alert {
+      box-sizing : border-box;
+      max-height : 85% !important;
+      overflow-y : auto !important;
+      padding-bottom: 30px !important;
+      margin-top: -70% !important;
+  }
 }
